--- a/src/simulatordialog.ui
+++ b/src/simulatordialog.ui
@@ -730,6 +730,37 @@ QPushButton:checked {
       </widget>
      </item>
      <item>
+      <widget class="QFrame" name="beep_frame">
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Panel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <property name="lineWidth">
+        <number>2</number>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout_10">
+        <property name="margin">
+         <number>2</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="label_beep">
+          <property name="text">
+           <string>BEEP</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
       <widget class="QFrame" name="cswitch_4">
        <property name="autoFillBackground">
         <bool>true</bool>
