--- a/src/eepe.qrc
+++ b/src/eepe.qrc
@@ -16,5 +16,9 @@
         <file>images/configure.png</file>
         <file>donators</file>
         <file>images/print.png</file>
+        <file>images/clear.png</file>
+        <file>images/add.png</file>
+        <file>images/edit.png</file>
+        <file>images/duplicate.png</file>
     </qresource>
 </RCC>
